kubernetes/clusters/kenobi/longhorn-system/longhorn/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: longhorn-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: longhorn-feldman-in-tls
      hosts:
        - longhorn.feldman.in
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: longhorn

spec:
  hosts:
    - longhorn.feldman.in
  gateways:
    - longhorn-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: longhorn-frontend
